# capy-privacy

./: .gitignore  LICENSE  README.md  TODO.md  capysecurity.com  certificates.sh  docker-compose.sh  docker-compose.yaml  init.sh  prerequisites.sh  start.sh  test.sh
.cursor/rules/: javascript-rules.mdc  python-rules.mdc  workspace-structure.mdc
admin/: README.md  eslint.config.js  orval.config.ts  package.json  svelte.config.js
admin/.svelte-kit/: non-ambient.d.ts
admin/.svelte-kit/types/: route_meta_data.json
admin/src/: app.css
admin/src/lib/api/: fetcher.ts
admin/src/lib/components/: Sidebar.svelte
admin/src/routes/: +layout.svelte
admin/static/: robots.txt
api/: Dockerfile  pyproject.toml  start.sh
api/database/: database.db-shm  database.db-wal
api/src/api/: __init__.py  configuration.py  database.py  exceptions.py  load.py  logging.py  security.py  tools.py
api/src/api/api/: auth.py  database.py  dns.py  health.py  metrics.py  setup.py  system.py
api/src/api/api/tmp/: dns.py  files.py_
api/src/api/models/: api.py  category.py  client.py  domain.py  group.py  metric.py  statistic.py  user.py
core/: Dockerfile
core/resources/metrics/: dnsmessage.proto  generate.sh  go.mod  go.sum  listener.go  readme.md
docs/: .$architecture.drawio.bkp  architecture.drawio  public-hosting.md
front/: Dockerfile
frontend/: Dockerfile
frontend/javascript/: .env.production  README.md  package.json  svelte.config.js
frontend/javascript/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
resources/custom/: capysecurity.com
(+151 files in other folders)
